<resources>
    <string name="topodroid_man">http://topolinux.googlecode.com/files/TopoDroid-20121130.pdf</string>
    <string name="app_name">TopoDroid</string>
    <string name="app_name_calib">TopoDroid - Calibration info</string>
    <string name="app_name_device">TopoDroid - DistoX device</string>
    <string name="app_name_drawing">TopoDroid - Drawing</string>
    <string name="app_name_notes">TopoDroid - Annotations</string>
    <string name="app_name_options">TopoDroid - Options</string>
    <string name="thp_air_draught">air-draught</string>
    <string name="thp_anchor">anchor</string>
    <string name="thp_blocks">blocks</string>
    <string name="thp_clay">clay</string>
    <string name="thp_continuation">continuation</string>
    <string name="thp_danger">danger</string>
    <string name="thp_choke">choke</string>
    <string name="thp_crystal">crystal</string>
    <string name="thp_debris">debris</string>
    <string name="thp_dig">dig</string>
    <string name="thp_gypsum">gypsum</string>
    <string name="thp_guano">guano</string>
    <string name="thp_end">end</string>
    <string name="thp_low_end">low-end</string>
    <string name="thp_entrance">entrance</string>
    <string name="thp_flowstone">flowstone</string>
    <string name="thp_gradient">gradient</string>
    <string name="thp_helictite">helictite</string>
    <string name="thp_ice">ice</string>
    <string name="thp_label">label</string>
    <string name="thp_pebbles">pebbles</string>
    <string name="thp_pillar">pillar</string>
    <string name="thp_popcorn">popcorn</string>
    <string name="thp_sand">sand</string>
    <string name="thp_sink">sink</string>
    <string name="thp_snow">snow</string>
    <string name="thp_sodastraw">soda-straw</string>
    <string name="thp_spring">spring</string>
    <string name="thp_stal">stal</string>
    <string name="thp_water">water</string>
    <string name="thp_water_flow">water-flow</string>
    <string name="thl_arrow">arrow</string>
    <string name="thl_border">border</string>
    <string name="thl_chimney">chimney</string>
    <string name="thl_contour">contour</string>
    <string name="thl_overhang">overhang</string>
    <string name="thl_pit">pit</string>
    <string name="thl_rock_border">rock-border</string>
    <string name="thl_slope">slope</string>
    <string name="thl_wall">wall</string>
    <string name="tha_blocks">blocks</string>
    <string name="tha_clay">clay</string>
    <string name="tha_debris">debris</string>
    <string name="tha_ice">ice</string>
    <string name="tha_pebbles">pebbles</string>
    <string name="tha_sand">sand</string>
    <string name="tha_snow">snow</string>
    <string name="tha_water">water</string>
    <string name="back_to_survey">Back to survey</string>
    <string name="calib_exists">Calibration already exists</string>
    <string name="calib_delete">Delete calibration </string>
    <string name="calib_device_mismatch">WARNING: Calibration-Device mismatch</string>
    <string name="compute_failed">Failed to compute calibration</string>
    <string name="connected">Connected</string>
    <string name="connected_already">Already connected</string>
    <string name="connected_not">Not connected</string>
    <string name="connect_failed">Failed connect</string>
    <string name="data"> data</string>
    <string name="using">Using %1$s</string>
    <string name="device_off">DistoX off</string>
    <string name="device_none">No DistoX selected</string>
    <string name="comment">comment</string>
    <string name="duplicate">duplicate</string>
    <string name="surface">surface</string>
    <string name="extend_left">Left</string>
    <string name="extend_right">Right</string>
    <string name="extend_vert">Vert</string>
    <string name="external_prompt">Enter measurement</string>
    <string name="few_data">Too few data</string>
    <string name="file_chooser_title">Select the file to import</string>
    <string name="file_parse_already">Survey already imported</string>
    <string name="file_parse_fail">Failed to import file</string>
    <string name="file_parse_none">No file to import</string>
    <string name="head_tail">Head/Tail: </string>
    <string name="head_tail_failed">Failed to read Head/Tail</string>
    <string name="label_text">Enter the label text</string>
    <string name="altitude">Alt.  </string>
    <string name="latitude">Lat.  </string>
    <string name="longitude">Long. </string>
    <string name="loop_closure_errors">Loop closure errors</string>
    <string name="loop_none">no loop</string>
    <string name="scale">scale</string>
    <string name="reversed">reversed</string>
    <string name="outline">outline</string>
    <string name="out">out</string>
    <string name="in">in</string>
    <string name="none">none</string>
    <string name="missing_station">Missing station</string>
    <string name="no_calib">No calibration</string>
    <string name="no_calibration">No calibration selected\nUse menu to select one</string>
    <string name="no_cave3d">Cave3D not installed</string>
    <string name="no_db">No database</string>
    <string name="no_device_address">Device address not selected</string>
    <string name="no_device_found">No device found</string>
    <string name="no_gms">Calibration has no data.\nUse Download menu to get some</string>
    <string name="no_paired_device">No paired device.\nScan and pair a DistoX</string>
    <string name="no_photos">Survey has no photo</string>
    <string name="no_plots">Survey has no scraps\nUse menu to make some</string>
    <string name="no_sensors">Survey has no measurement</string>
    <string name="no_shots">Survey has no shots.\nUse Download menu to get some</string>
    <string name="no_survey">No survey selected.\nUse menus to select one</string>
    <string name="no_undelete">No item to undelete</string>
    <string name="not_available">BT not available</string>
    <string name="not_connected">Not connected</string>
    <string name="not_enabled">BT not enabled</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="null_bitmap">null bitmap</string>
    <string name="photo">photo</string>
    <string name="photo_comment_prompt">Enter the photo comment</string>
    <string name="photo_name">station/name</string>
    <string name="photo_photo">photo</string>
    <string name="photo_sensor">sensor</string>
    <string name="photo_external">measurement</string>
    <string name="photo_sensor_prompt">Select photo or sensor</string>
    <string name="picture_no_station">Need a station/name for the photo</string>
    <string name="plot_name">Plot name</string>
    <string name="plot_not_found">Scrap not found</string>
    <string name="plot_null_name">Missing plot name</string>
    <string name="plot_null_start">Missing start station</string>
    <string name="plot_start">Start station</string>
    <string name="plot_view">Viewed station</string>
    <string name="read_">Read </string>
    <string name="read_fail_with_code">Read failure: error code </string>
    <string name="read_failed">Failed to read from DistoX</string>
    <string name="reading_file_failed">Failed to read file</string>
    <string name="saved_file_">Saved file </string>
    <string name="shot_from">from</string>
    <string name="shot_info">Enter shot data</string>
    <string name="shot_note">note</string>
    <string name="shot_to">to</string>
    <string name="station">station</string>
    <string name="description">description</string>
    <string name="button_add"       >Add       </string>
    <string name="button_cancel"    >Cancel    </string>
    <string name="button_drop"      >Delete    </string>
    <string name="button_manual"    >Manual</string>
    <string name="button_ok"        >O.K.      </string>
    <string name="button_save"      >Save      </string>
    <string name="button_gps_start" >GPS       </string>
    <string name="btn_move">Move</string>
    <string name="btn_zoom">Zoom</string>
    <string name="btn_undo">Undo</string>
    <string name="btn_point">Point</string>
    <string name="btn_line">Line</string>
    <string name="btn_area">Area</string>
  <string name="pref_cat_survey">Survey options</string>
  <string name="pref_cat_drawing">Drawing options</string>
  <string name="pref_cat_calib">Calibration options</string>
  <string name="pref_cat_device">DistoX options</string>
  <string name="pref_base_path_title">Parent directory</string>
  <string name="pref_base_path_summary">TopoDroid parent directory</string>
  <string name="pref_base_path_message">Enter TopoDroid parent directory</string>
  <string name="pref_export_title">Export</string>
  <string name="pref_export_summary">Select type of export</string>
  <string name="pref_list_refresh_title">List refresh</string>
  <string name="pref_list_refresh_summary">Force list refresh</string>
  <string name="pref_leg_title">Leg tolerance</string>
  <string name="pref_leg_summary">Tolerance among the shots of a leg</string>
  <string name="pref_leg_message">Tolerance among the shots of a leg</string>
  <string name="pref_vthr_title">Shot vthreshold</string>
  <string name="pref_vthr_summary">Leg vertical threshold for LRUD</string>
  <string name="pref_vthr_message">Leg vertical threshold for LRUD</string>
  <string name="pref_drawing_unit_title">Symbol scale</string>
  <string name="pref_drawing_unit_summary">Scale of the symbols on the screen</string>
  <string name="pref_drawing_unit_message">Scale of the symbols on the screen</string>
  <string name="pref_segment_title">Line tolerance</string>
  <string name="pref_segment_summary">Minimum distance between two points on a line</string>
  <string name="pref_segment_message">Minimum distance between two points on a line</string>
  <string name="pref_lineacc_title">Line accuracy</string>
  <string name="pref_lineacc_summary">Line cubic interpolation accuracy</string>
  <string name="pref_lineacc_message">Line cubic interpolation accuracy</string>
  <string name="pref_linecorner_title">Line corner</string>
  <string name="pref_linecorner_summary">Line corner threshold</string>
  <string name="pref_linecorner_message">Line corner detection threshold</string>
  <string name="pref_linestyle_title">Line style</string>
  <string name="pref_linestyle_summary">Line drawing style</string>
  <string name="pref_group_by_title">Group policy</string>
  <string name="pref_group_by_summary">Policy to group calibration data</string>
  <string name="pref_group_title">Group tolerance</string>
  <string name="pref_group_summary">Tolerance among shots in the same group</string>
  <string name="pref_group_message">Tolerance among shots in the same group</string>
  <string name="pref_error_title">Error</string>
  <string name="pref_error_summary">Minimum calibration error</string>
  <string name="pref_error_dialogtitle">Calibration error</string>
  <string name="pref_error_message">Minimum calibration error</string>
  <string name="pref_iter_title">Iterations</string>
  <string name="pref_iter_summary">Maximum number of iterations</string>
  <string name="pref_iter_dialogtitle">Calibration iterations</string>
  <string name="pref_iter_message">Calibration iterations</string>
  <string name="pref_device_title">Device</string>
  <string name="pref_device_summary">DistoX address name</string>
  <string name="pref_device_message">DistoX address name</string>
  <string name="pref_checkBT_title">Check BT</string>
  <string name="pref_checkBT_summary">Check Bluetooth on start</string>
  <string name="pref_checkAttached_title">Centerline check</string>
  <string name="pref_checkAttached_summary">Check if stations are attached</string>
  <string name="pref_unit_length_title">Length units</string>
  <string name="pref_unit_length_summary">Display units for lengths</string>
  <string name="pref_unit_angle_title">Angle units</string>
  <string name="pref_unit_angle_summary">Display units for angles</string>
</resources>