<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <!-- CheckBoxPreference
    android:key="DISTOX_SAVE_ON_DESTROY"
    android:summary="Save current survey and calib"
    android:title="Store preferences"
    android:defaultValue="true"
  / -->

  <com.android.DistoX.MyEditPreference
       android:key="DISTOX_BASE_PATH"
       android:title="@string/pref_base_path_title"
       android:summary="@string/pref_base_path_summary"
       android:dialogTitle="@string/pref_base_path_title"
       android:dialogMessage="@string/pref_base_path_message"
       />


  <PreferenceCategory 
     android:title="@string/pref_cat_survey"
     android:key="survey_category">

     <com.android.DistoX.MyListPreference
       android:key="DISTOX_UNIT_LENGTH"
       android:summary="@string/pref_unit_length_summary"
       android:title="@string/pref_unit_length_title"
       android:defaultValue="meters"
       android:entries="@array/unitLength"
       android:entryValues="@array/unitLengthValue"
     />

     <com.android.DistoX.MyListPreference
       android:key="DISTOX_UNIT_ANGLE"
       android:summary="@string/pref_unit_angle_summary"
       android:title="@string/pref_unit_angle_title"
       android:defaultValue="degrees"
       android:entries="@array/unitAngle"
       android:entryValues="@array/unitAngleValue"
     />

     <com.android.DistoX.MyListPreference
       android:key="DISTOX_EXPORT_TYPE"
       android:summary="@string/pref_export_summary"
       android:title="@string/pref_export_title"
       android:defaultValue="th"
       android:entries="@array/exportType"
       android:entryValues="@array/exportTypeValue"
     />
     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_CLOSE_DISTANCE"
       android:title="@string/pref_leg_title"
       android:summary="@string/pref_leg_summary"
       android:dialogTitle="@string/pref_leg_title"
       android:dialogMessage="@string/pref_leg_message"
       android:inputType="numberDecimal"
       android:defaultValue="0.1" />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_VTHRESHOLD"
       android:title="@string/pref_vthr_title"
       android:summary="@string/pref_vthr_summary"
       android:dialogTitle="@string/pref_vthr_title"
       android:dialogMessage="@string/pref_vthr_message"
       android:inputType="numberDecimal"
       android:defaultValue="80.0" />

     <CheckBoxPreference
       android:key="DISTOX_LIST_REFRESH"
       android:summary="@string/pref_list_refresh_summary"
       android:title="@string/pref_list_refresh_title"
       android:defaultValue="false"
     />

  </PreferenceCategory>

  <PreferenceCategory 
     android:title="@string/pref_cat_drawing"
     android:key="drawing_category">

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_DRAWING_UNIT"
       android:title="@string/pref_drawing_unit_title"
       android:summary="@string/pref_drawing_unit_summary"
       android:dialogTitle="@string/pref_drawing_unit_title"
       android:dialogMessage="@string/pref_drawing_unit_message"
       android:inputType="numberDecimal"
       android:defaultValue="1.2" />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_LINE_SEGMENT"
       android:title="@string/pref_segment_title"
       android:summary="@string/pref_segment_summary"
       android:dialogTitle="@string/pref_segment_title"
       android:dialogMessage="@string/pref_segment_message"
       android:inputType="number"
       android:defaultValue="3" />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_LINE_ACCURACY"
       android:title="@string/pref_lineacc_title"
       android:summary="@string/pref_lineacc_summary"
       android:dialogTitle="@string/pref_lineacc_title"
       android:dialogMessage="@string/pref_lineacc_message"
       android:inputType="numberDecimal"
       android:defaultValue="1.0" />

     <com.android.DistoX.MyListPreference
       android:key="DISTOX_LINE_STYLE"
       android:summary="@string/pref_linestyle_summary"
       android:title="@string/pref_linestyle_title"
       android:defaultValue="bezier"
       android:entries="@array/lineStyle"
       android:entryValues="@array/lineStyleValue"
     />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_LINE_CORNER"
       android:title="@string/pref_linecorner_title"
       android:summary="@string/pref_linecorner_summary"
       android:dialogTitle="@string/pref_linecorner_title"
       android:dialogMessage="@string/pref_linecorner_message"
       android:inputType="numberDecimal"
       android:defaultValue="20.0" />

     <CheckBoxPreference
       android:key="DISTOX_CHECK_ATTACHED"
       android:summary="@string/pref_checkAttached_summary"
       android:title="@string/pref_checkAttached_title"
       android:defaultValue="false"
     />

  </PreferenceCategory>

  <PreferenceCategory 
     android:title="@string/pref_cat_calib"
     android:key="calib_category">

     <com.android.DistoX.MyListPreference
       android:key="DISTOX_GROUP_BY"
       android:summary="@string/pref_group_by_summary"
       android:title="@string/pref_group_by_title"
       android:defaultValue="0"
       android:entries="@array/groupBy"
       android:entryValues="@array/groupByValue"
     />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_GROUP_DISTANCE"
       android:title="@string/pref_group_title"
       android:summary="@string/pref_group_summary"
       android:dialogTitle="@string/pref_group_title"
       android:dialogMessage="@string/pref_group_message"
       android:inputType="numberDecimal"
       android:defaultValue="40.0" />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_CALIB_EPS"
       android:title="@string/pref_error_title"
       android:summary="@string/pref_error_summary"
       android:dialogTitle="@string/pref_error_dialogtitle"
       android:dialogMessage="@string/pref_error_message"
       android:inputType="numberDecimal"
       android:defaultValue="0.000001" />

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_CALIB_MAX_IT"
       android:title="@string/pref_iter_title"
       android:summary="@string/pref_iter_summary"
       android:dialogTitle="@string/pref_iter_dialogtitle"
       android:dialogMessage="@string/pref_iter_message"
       android:inputType="number"
       android:defaultValue="200" />

  </PreferenceCategory>

  <PreferenceCategory 
     android:title="@string/pref_cat_device"
     android:key="distox_category">

     <com.android.DistoX.MyEditPreference
       android:key="DISTOX_DEVICE"
       android:title="@string/pref_device_title"
       android:summary="@string/pref_device_summary"
       android:dialogTitle="@string/pref_device_title"
       android:dialogMessage="@string/pref_device_message"
       android:enabled="false"
       android:defaultValue="" />

     <CheckBoxPreference
       android:key="DISTOX_CHECK_BT"
       android:summary="@string/pref_checkBT_summary"
       android:title="@string/pref_checkBT_title"
       android:defaultValue="true"
     />

     <!-- com.android.DistoX.MyListPreference
       android:key="DISTOX_CONN_MODE"
       android:summary="@string/pref_conn_mode_summary"
       android:title="@string/pref_conn_mode_title"
       android:defaultValue="0"
       android:entries="@array/connMode"
       android:entryValues="@array/connModeValue"
     / -->

  </PreferenceCategory>

</PreferenceScreen>
