<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dip"
    android:paddingRight="6dip"
    android:paddingBottom="3dip">

    <TextView android:id="@+id/shot_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="18sp"
        android:text="@string/shot_info"
        />
   					  
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <EditText android:id="@+id/shot_from" 
        android:singleLine="true" 
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:width="100dip"
        android:layout_height="wrap_content" 
        android:hint="@string/shot_from"
        android:nextFocusDown="@+id/shot_to"
        />
      <EditText android:id="@+id/shot_to" 
        android:singleLine="true" 
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
        android:width="100dip"
        android:layout_height="wrap_content" 
        android:hint="@string/shot_to"
        />
    </LinearLayout>				  

    <EditText android:id="@+id/shot_comment" 
        android:maxLines="1" 
        android:layout_marginTop="2dip"
        android:layout_width="wrap_content"
      	android:ems="25"
        android:layout_height="wrap_content" 
        android:scrollHorizontally="true"
        android:autoText="false"
        android:singleLine="true"
        android:hint="@string/shot_note"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extend_left" />
      <RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extend_vert" />
      <RadioButton xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/extend_right" />
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/shot_dup"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="duplicate"
        />

      <CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/shot_surf"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="surface"
        />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <Button android:id="@+id/button_ok_shot_name"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:text="@string/button_save"
        />
   		
      <Button android:id="@+id/button_cancel_shot_name"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:text="@string/button_cancel"
        />
      <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        >
      <Button android:id="@+id/button_drop_shot_name"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:text="@string/button_drop"
        />
      </LinearLayout>
    </LinearLayout>
   		
</LinearLayout>
