<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <com.android.DistoX.DrawingSurface
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/drawingSurface"
    />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
    >
<!--
                android:background="@drawable/move"
                android:background="@drawable/zoom"
                android:background="@drawable/undo"
                android:background="@drawable/point"
                android:background="@drawable/line"
                android:background="@drawable/area"
                android:textSize="12sp"
-->
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/modeBtn"
                android:text="@string/btn_move"
                android:textSize="12sp"
        />
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/zoomBtn"
                android:text="@string/btn_zoom"
                android:textSize="12sp"
        />
        <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/undoBtn"
                android:text="@string/btn_undo"
                android:textSize="12sp"
        />
        <!-- Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/redoBtn"
                android:text="@string/btn_redo"
                android:textSize="12sp"
        / -->
         <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/pointBtn"
                android:text="@string/btn_point"
                android:textSize="12sp"
         />
         <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/lineBtn"
                android:text="@string/btn_line"
                android:textSize="12sp"
         />
         <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:onClick="onClick"
                android:id="@+id/areaBtn"
                android:text="@string/btn_area"
                android:textSize="12sp"
         />
    </LinearLayout>
</RelativeLayout>
