<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="3dp">
   					  
    <TextView android:id="@+id/photo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="18sp"
        />

    <ImageView android:id="@+id/photo_image"
        android:layout_width="fill_parent"
        android:layout_height="80sp" 
        android:scaleType="fitCenter"
        />
   					  
    <EditText android:id="@+id/photo_title" 
        android:layout_marginTop="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:singleLine="true"
        android:scrollHorizontally="true" />
   		
    <EditText android:id="@+id/photo_comment" 
        android:layout_marginTop="2dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:singleLine="true"
        android:hint="@string/description"
        android:scrollHorizontally="true" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      >
        <Button
                android:id="@+id/photo_ok"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:width="70dp"
                android:onClick="onClick"
                android:text="@string/button_ok"
                android:textSize="12sp"
        />
        <Button
                android:id="@+id/photo_cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:width="70dp"
                android:onClick="onClick"
                android:text="@string/button_cancel"
                android:textSize="12sp"
        />
    </LinearLayout>

</LinearLayout>
